Fix company logo vertical alignment on profile page (#77)

--- a/enrolment/static/sass/company-profile-details.scss
+++ b/enrolment/static/sass/company-profile-details.scss
@@ -54,6 +54,7 @@
     a {
       clear: both;
       display: inline-block;
+      line-height: 1.2em;
       max-width: 100%;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -345,11 +346,13 @@
 
 .ed-company-profile-logo-container {
   border: 1px solid #dedede;
+  line-height: 147px;
   min-width: 147px;
   min-height: 147px;
   img {
     max-height: 147px;
     max-width: 100%;
+    vertical-align: middle;
   }
 }
 
